--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <html>
-<head>
+<body>
 <title> Device Properities Example</title>
+          document.addEventListener("deviceready",onDeviceReady, false);
+
     <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
     <script type="text/javascript" charset="utf-8">
     
-      document.addEventListener("deviceready",onDeviceReady, false);
   
     function onDeviceReady() {
-    var element = document.getElementById('deviceProperities');
-    element.innerHTML = 'Device Name: ' + device.name +'<br />'+
+    var element = document.getElementById('deviceProperities').innerHTML = 'Device Name: ' + device.name +'<br />'+
                         'Device Cordova: ' + device.cordova +'<br />'+
                         'Device Platform: ' + device.platform +'<br />'+
                         'Device UUID: ' + device.uuid +'<br />'+
@@ -16,8 +16,7 @@
                         'Device Version: ' + device.version +'<br />'+
     }
     </script>
-</head>
-    <body>
+     
         <p id="deviceProperities">Loading device properities...</p>
     </body>
 </html>
